sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:7: error: not found: value a
    a = trouveBaseJoueur(i,nbrB)._1
    ^